Fixed a bug with z-index

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -14,7 +14,6 @@ html {
 body {
 	overflow-x: hidden;
 	overflow-y: auto;
-	z-index: 1;
 	background: white;
 	width: 100%;
 	padding: 0;
@@ -22,7 +21,7 @@ body {
 }
 
 .menu {
-	z-index: -1;
+	z-index: 1;
 	width: 20%;
 	height: 100%;
 	left: 0;
@@ -58,7 +57,7 @@ body {
 				left: 0;
 
 				/* edit: added z-index */
-				z-index: 1;
+				z-index: 2;
 			}
 		}
 
@@ -80,7 +79,7 @@ body {
 
 		.menuPointer {
 			display: inline-block;
-			width: 5%;
+			width: 4%;
 			margin-left: 10%;
 			margin-right: 6%;
 			h3 {
@@ -132,8 +131,9 @@ body {
 	padding-right: 20px;
 	padding-left: 20px;
 	background:white;
-	z-index: 1;
 	overflow-x: hidden;
+
+	z-index: 3;
 
 	-webkit-transform: translateZ(0);
 	-webkit-transition: all .2s ease;
